# 3-python-package-httprequest

./: .gitignore  Pipfile  README.md
.github/workflows/: build.yaml
src/: Pipfile  __init__.py  example.py  fun.py  pyproject.toml  test_fun.py
src/chucklepy/: example.py  fun.py
src/tests/: test_fun.py
