[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chucklepy"
version = "0.1.0"
description = "A lighthearted Python package that brings joy."
authors = [
  { name = "Xiaowei Ma", email = "xm2212@nyu.edu" },
  { name = "Weite Li",   email = "wl2811@nyu.edu" },
  { name = "Mandy Mao",  email = "mm13721@nyu.edu" },
  { name = "Rishi Rana", email = "rr4211@nyu.edu" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["fun", "comedy", "puns", "insults", "lighthearted"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/software-students-spring2025/3-python-package-httprequest"
